--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -376,7 +376,7 @@ h1, h2, h3, h4, h5, h6 {
 #hero {
   width: 100%;
   height: 80vh;
-  background: url("../img/hero-bg.jpg") center center;
+  background: url("../assets/img/bg1.jpg") center center;
   background-size: cover;
   position: relative;
 }
